--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>CounselingWale</title>
-  <meta content="" name="description">
+  <meta content="At CounselingWale, we provide comprehensive career guidance and support to individuals of all ages and backgrounds. Our mission is to help you explore your career options, make informed decisions, and achieve your professional goals." name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -96,7 +96,7 @@
           </div>
           <div class="col-lg-6 d-flex flex-column justify-contents-center" data-aos="fade-left">
             <div class="content pt-4 pt-lg-0">
-              <h3>Learn more about us</h3>
+              <h3>About CounselingWale</h3>
               <!--<p class="fst-italic">-->
               <p>
                 At CounselingWale, we provide comprehensive career guidance and support to individuals of all ages and backgrounds. Our mission is to help you explore your career options, make informed decisions, and achieve your professional goals. With a team of experienced career counselors, we are passionate about equipping individuals with the tools and resources they need to succeed in today's competitive job market.
