--- a/tos.html
+++ b/tos.html
@@ -70,7 +70,7 @@
 
       <p>
         Welcome to counselingwale (the “Site”). The Site is owned and operated
-        by [company name] (“we”, “us” or “our”).<br /><br />
+        by counselingwale (“we”, “us” or “our”).<br /><br />
         By accessing or using the Site, you agree to be bound by the following
         terms and conditions which you should read carefully. If you do not
         agree to these terms, you may not access or use the Site. We reserve the
@@ -187,7 +187,7 @@
         recommendation of the third party, information, product or service.
         <br /><br />8. Governing Law and Jurisdiction<br /><br />
         This Agreement shall be governed by and construed in accordance with the
-        laws of the jurisdiction in which [company name] is located.
+        laws of the jurisdiction in which counselingwale is located.
       </p>
     </div>
   </body>
