--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ Psychologist<!DOCTYPE html>
 
         <div class="section-title" data-aos="fade-up">
           <h2>Testimonials</h2>
-          <p>Over the years, CounselingWale has had the privilege of assisting numerous individuals in achieving their career goals. Our satisfied clients include school students, college students, and professionals from various industries. We take pride in their success stories and are honored to have played a role in their journey.</p>
+          <p>CounselingWale has had the privilege of assisting numerous individuals in achieving their career goals. Our satisfied clients include school students, college students and professionals. We take pride in their success stories and are honored to have played a role in their journey.</p>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -923,9 +923,9 @@ Psychologist<!DOCTYPE html>
               </p>
               <div class="social-links mt-3">
                 
-                <a href="https://www.youtube.com/@counselingwale/featured" class="youtube"><i class="bx bxl-youtube"></i></a>
-                <a href="https://instagram.com/counselingwale?igshid=MzRlODBiNWFlZA==" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="https://www.facebook.com/profile.php?id=100094171003483&mibextid=ZbWKwL" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="https://www.youtube.com/@counselingwale/featured" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
+                <a href="https://instagram.com/counselingwale?igshid=MzRlODBiNWFlZA==" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100094171003483&mibextid=ZbWKwL" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
              </div>
             </div>
           </div>
@@ -937,7 +937,7 @@ Psychologist<!DOCTYPE html>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#services">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="tos.html">Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="tos.html">Terms and Conditions</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="privacypolicy.html">Privacy policy</a></li>
             </ul>
           </div>
