--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Psychologist<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -589,7 +589,7 @@ Psychologist<!DOCTYPE html>
               <div class="pic"><img src="assets/img/team/Rishi.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Dr. Rishi Mishra</h4>
-                <span>Senior Counselor/Pychologist</span>
+                <span>Senior Counselor/Psychologist</span>
                 
               </div>
             </div>
